--- a/css/css.css
+++ b/css/css.css
@@ -16,7 +16,7 @@
     top: 580px
 }
 
-.menu{
+/*.menu{
     position: absolute;
     width: 49px;
     height: 42px;
@@ -24,4 +24,104 @@
     background-repeat: no-repeat;
     background-size: cover;
     border-style: none;
+}*/
+
+#show-modal{
+    text-align: center;
+    /*background-color: #bc651a;*/
+    /*padding: 15px 15px;*/
+    color: white;
+    font-weight: 500;
+    /*font-size: 1.5em;*/
+    border-radius: 3.5px;
+    text-decoration: none;
+    /*transition: all 0.15s linear;*/
+}
+
+/*#show-modal:hover{
+    cursor: pointer;
+    background: #bc9d1a;
+}*/
+
+.modal{
+    position: fixed;
+    top: -100vh;
+    left: 0;
+    z-index: 99999999;
+    background: rgba(0, 0, 0, 0.75);
+    width: 100vw;
+    height: 100vh;
+    opacity: 0;
+    transition: opacity 0.35s ease;
+}
+
+.modal .content-modal{
+    width: 550px;
+    max-width: 600px;
+    position: relative;
+    left: 50%;
+    top: -100vh;
+    left: 408px;
+    transition: top 0.35s ease;
+    margin-left: -250px;
+    background: #2C282C;
+    box-shadow:  0 1px 2px rgba(0,0,0,0,1);
+    border-radius: 2px;
+    z-index: 9999999;
+}
+
+.modal h2{
+    padding: 0.5em;
+    text-align: center;
+    color:white;
+    margin: 0;
+}
+
+.modal article{
+    height: 480px;
+    /*background: #bc651a;*/
+    background-color: #2B2A29;
+}
+
+.close-modal{
+    height: #e74c3c;
+    position: absolute;
+    top: 0.2em;
+    right: 0.375em;
+    margin: 0;
+    padding: 5px;
+    font-weight: bold;
+    font-size: 1.5em;
+    text-decoration: none;
+}
+
+.modal a:hover{
+    color: #c0392b;
+}
+
+.modal:target{
+    opacity: 1;
+    top: 0;
+}
+
+.modal .btn-close-modal{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999991;
+}
+
+.modal:target .content-modal{
+    top: 50px;
+    transition: top 0.35s ease;
+}
+
+@media (max-width: 796px){
+    .modal .content-modal{
+        width: 90%;
+        max-width: none;
+        left: 5%;
+        margin-left: 0;
+    }
 }
